# wc26-predictor

./: .gitignore  AGENTS.md  MINI_README.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: update-after-matchday.yml
.streamlit/: pages.toml
assets/team_photos/: France.avif  Qatar.avif  Turkey.avif  Uruguay.avif
data/config/: wc26_played_matches.csv  wc26_teams.csv
data/processed/: latest_model_update_report.json  training_matches.parquet
legacy/euro-2024-score-predictor/: .gitignore  README.md  app.py  model.py  predict.py  requirements.txt
models/: away_goals_model.cbm  away_goals_model.joblib  h2h_profiles.csv  h2h_profiles.parquet  home_goals_model.cbm  home_goals_model.joblib  model_metadata.json  outcome_model.joblib  team_profiles.csv  team_profiles.parquet  tuning_results_focused.json
pages/: 1_Team_Odds.py  2_Group_Winners.py  2_Match_Predictor.py  3_Group_Winners.py  3_Match_Predictor.py  4_Bracket.py
src/: __init__.py
src/app/: __init__.py  dashboard.py  team_flags.py  team_images.py  theme.py
src/automation/: __init__.py  update_after_matchday.py
src/data/: config.py  (+9 more)
tests/: test_joins.py  test_loaders_international_results.py  test_model_features.py  test_rolling_features.py  test_simulation_knockout.py  test_simulation_monte_carlo.py  test_simulation_neutral_order_invariance.py  test_simulation_official_knockout.py  test_simulation_played_matches.py  test_simulation_standings.py  test_simulation_team_config.py  test_simulation_third_place.py  test_simulation_update_wc26_teams.py  test_standardize.py
(+36 files in other folders)
