[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wc26-predictor"
version = "0.1.0"
description = "Date-safe data pipeline for World Cup 2026 match and tournament prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ade Adekoya" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=16.0",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "streamlit>=1.38",
  "plotly>=5.24",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]
