[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wc26-predictor"
version = "0.1.0"
description = "Date-safe data pipeline for World Cup 2026 match and tournament prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ade Adekoya" }
]
dependencies = [
  "numpy==2.0.2",
  "pandas==2.3.3",
  "pyarrow==21.0.0",
  "scipy==1.13.1",
  "scikit-learn==1.6.1",
  "joblib==1.5.3",
  "catboost==1.2.10",
  "streamlit==1.50.0",
  "plotly==6.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]
